Module Entreprise complet + Transactions Gerant/Client Particulier
- Espace Admin Entreprise : dashboard, employes, departements, cartes, utilisateurs, rapports
- Espace Admin Departement : dashboard, employes, cartes (scope departemental)
- Gestion des cartes : cycle de vie, dotations, recharge unitaire/groupee
- Solde entreprise et allocation budgetaire hierarchique (Entreprise -> Departement -> Carte)
- Renouvellement automatique des dotations (tache planifiee)
- Centre de notifications (alertes solde faible)
- Transactions Gerant : identification par carte/telephone, mouvement de solde reel, reference unique
- Correctif : recherche ambigue de l'admin entreprise (findByEntrepriseIdAndActif)